fix wordwrap header menu

--- a/app/core/static/core/app.css
+++ b/app/core/static/core/app.css
@@ -268,6 +268,9 @@ header .navbar-header button > i {
         padding-left: 45px !important;
         padding-right: 45px !important;
     }
+    header .dropdown-menu > li > a {
+        word-wrap: unset;
+    }
 }
 .mobile-dropdown {
   position: absolute;
